--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,10 +24,11 @@ const navigation: INavigation[] = pages.map(
 );
 
 const navigationHeader = navigation.filter((nav) =>
-	nav.navigation.includes("Header"),
+	nav.navigation?.includes("Header")
 );
+
 const navigationFooter = navigation.filter((nav) =>
-	nav.navigation.includes("Footer"),
+	nav.navigation?.includes("Footer")
 );
 ---
 
@@ -35,13 +36,13 @@ const navigationFooter = navigation.filter((nav) =>
     <Header navigation={navigationHeader}/>
     <main>
 			{pages.map((originPage) =>
-				originPage.data.mainstage === true ?
-                <Section page={originPage}/> : null
+				originPage.data.mainstage === true ? (
+                <Section page={originPage}/>
+				) : null
 			)}
     </main>
     <Footer navigation={navigationFooter}/>
 </Layout>
-
 
 <style lang="scss" is:global>
   @import "./../styles/GlobalStyling";
