--- a/src/styles/Scrollbar.scss
+++ b/src/styles/Scrollbar.scss
@@ -1,3 +1,4 @@
+/*
 $scrollbar-bg: #e0e0e0;
 $scrollbar-thumb: #888;
 $scrollbar-thumb-hover: #555;
@@ -43,3 +44,4 @@ main {
     background-color: $scrollbar-thumb-hover;
   }
 }
+*/
