--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,10 @@ import Contact from "../components/Contact.astro";
 <Layout title="Eckwerk Stuttgart">
     <main>
         <Icon name="logo2"/>
-        <h1>Wir renovieren momentan für Sie und sind bald <br/> zurück.</h1>
+        <p>Unsere Homepage macht gerade Urlaub. <br/>
+            <br/>
+            Wir sind aber gerne jederzeit für Sie da und stehen mit Rat und Tat zur Seite. <br/>
+            Melden Sie sich einfach bei uns!</p>
         <Contact/>
     </main>
 </Layout>
