--- a/src/components/Image.astro
+++ b/src/components/Image.astro
@@ -1,17 +1,13 @@
 ---
-import {Image} from 'astro:assets';
-
 interface Props {
 	src: string;
 	altText: string;
-	sologan: string;
+	slogan: string;
 }
 
-const src = Astro.props.src;
-const altText = Astro.props.altText;
 ---
 <div>
-    <AstroImage src={src} alt={altText}/>
+
 </div>
 
 <style lang="scss">
