--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -154,7 +154,7 @@ const {navigationPostion} = Astro.props;
 
       li {
         margin-right: $spacing-l;
-        font-weight: 300;
+        font-weight: 350;
 
         &:last-child {
           margin-right: unset;
@@ -164,6 +164,7 @@ const {navigationPostion} = Astro.props;
           text-decoration: none;
           text-transform: uppercase;
           font-family: Source Code Pro Variable, sans-serif;
+          font-size: 1.1rem;
           cursor: pointer;
         }
       }
@@ -178,11 +179,10 @@ const {navigationPostion} = Astro.props;
         display: none;
       }
 
-
       button {
         position: absolute;
-        top: .75rem;
-        right: .75rem;
+        top: 1.25rem;
+        right: 1.25rem;
         background: none;
         border: none;
         color: $color-white;
