--- a/src/styles/Grid.scss
+++ b/src/styles/Grid.scss
@@ -17,7 +17,7 @@ $grid-spacing: (
         m: 24px,
         l: 32px,
         xl: 40px,
-        xll: 48px
+        xxl: 48px
 );
 
 $grid-columns: 12;
