--- a/src/components/GoBack.astro
+++ b/src/components/GoBack.astro
@@ -17,44 +17,52 @@ import {Icon} from "astro-icon/components";
 	const scrollTopButton = document.getElementById('scrollTopButton');
 	const scrollnextTopSection = document.getElementById('scrollnextTopSection');
 
-	scrollTopButton.addEventListener('click', function () {
-		window.scrollTo({
-			top: 0,
-			behavior: 'smooth'
-		});
-	});
-
-	scrollnextTopSection.addEventListener('click', function () {
-		const sections = document.querySelectorAll('section');
-		let currentScroll = window.scrollY;
-
-		let previousSection = null;
-		for (let i = sections.length - 1; i >= 0; i--) {
-			if (sections[i].offsetTop < currentScroll) {
-				previousSection = sections[i];
-				break;
-			}
-		}
-
-		if (previousSection) {
+	if (scrollTopButton) {
+		scrollTopButton.addEventListener('click', function () {
 			window.scrollTo({
-				top: previousSection.offsetTop,
+				top: 0,
 				behavior: 'smooth'
 			});
-		}
-	});
+		})
+	}
 
-	window.addEventListener('scroll', function () {
-		const scrollY = window.scrollY;
-		const windowHeight = window.innerHeight;
-		const documentHeight = document.documentElement.scrollHeight;
+	if (scrollnextTopSection) {
+		scrollnextTopSection.addEventListener('click', function () {
+			const sections = document.querySelectorAll('section');
+			let currentScroll = window.scrollY;
 
-		if (scrollY <= 50 || (scrollY + windowHeight) >= documentHeight) {
-			scrollToolBox.style.display = 'none';
-		} else {
-			scrollToolBox.style.display = 'flex';
-		}
-	});
+			let previousSection = null;
+			for (let i = sections.length - 1; i >= 0; i--) {
+				if (sections[i].offsetTop < currentScroll) {
+					previousSection = sections[i];
+					break;
+				}
+			}
+
+			if (previousSection) {
+				window.scrollTo({
+					top: previousSection.offsetTop,
+					behavior: 'smooth'
+				});
+			}
+		})
+	}
+
+	if (scrollToolBox) {
+		window.addEventListener('scroll', function () {
+			const scrollY = window.scrollY;
+			const windowHeight = window.innerHeight;
+			const documentHeight = document.documentElement.scrollHeight;
+
+
+			if (scrollY <= 50 || (scrollY + windowHeight) >= documentHeight) {
+				scrollToolBox.style.display = 'none';
+			} else {
+				scrollToolBox.style.display = 'flex';
+			}
+		})
+	}
+
 </script>
 
 <style lang="scss">
