--- a/src/layouts/multi.astro
+++ b/src/layouts/multi.astro
@@ -1,9 +1,34 @@
 ---
+import {getCollection} from "astro:content";
+import type {INavigation} from "../types/navigation";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import GoBack from "../components/GoBack.astro";
 interface Props {
 	title: string;
 }
 
 const {title} = Astro.props;
+
+
+const pages = await getCollection("pages");
+
+const navigation: INavigation[] = pages.map(
+(page: any): INavigation => ({
+  page: page,
+  title: page.data.title,
+  navigation: page.data.navigation,
+  slug: page.slug,
+  }),
+);
+
+const navigationHeader = navigation.filter((nav) =>
+nav.navigation?.includes("Header")
+);
+
+const navigationFooter = navigation.filter((nav) =>
+nav.navigation?.includes("Footer")
+);
 ---
 
 <!doctype html>
@@ -17,7 +42,12 @@ const {title} = Astro.props;
     <title>{title}</title>
 </head>
 <body>
-<slot/>
+    <Header navigation={navigationHeader}/>
+    <main>
+        <slot/>
+    </main>
+    <GoBack/>
+    <Footer navigation={navigationFooter}/>
 </body>
 </html>
 
