--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,7 @@ const year = date.getFullYear();
 					return (
             <li>
                   <a
-                          href={item.title}
+                          href={"eckwerkstuttgart/" + item.title}
                           data-href={item.title}
                           aria-current="page"
                   >
