--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -1,51 +1,17 @@
 ---
-import {getCollection} from "astro:content";
 import Layout from "../layouts/single.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import type {INavigation} from "../types/navigation";
 import "@fontsource-variable/montserrat";
 import "@fontsource-variable/fira-code";
 import "@fontsource-variable/source-code-pro";
 import '@fontsource/source-sans-pro';
 import "@fontsource/roboto";
 import "./../styles/GlobalStyling.scss";
-
-const pages = await getCollection("pages");
-const {Content} = await page.render();
-
-const navigation: INavigation[] = pages.map(
-	(page: any): INavigation => ({
-		page: page,
-		title: page.data.title,
-		navigation: page.data.navigation,
-		slug: page.slug,
-	}),
-);
-
-const navigationHeader = navigation.filter((nav) =>
-	nav.navigation?.includes("Header")
-);
-
-const navigationFooter = navigation.filter((nav) =>
-	nav.navigation?.includes("Footer")
-);
-
-let page;
 ---
 
 <Layout title="Eckwerk Stuttgart">
-    <Header navigation={navigationHeader}/>
     <main>
-        <section id={page.data.title}>
-            <div>
-                <article>
-                    <div><Content/></div>
-                </article>
-            </div>
-        </section>
+        Hallo
     </main>
-    <Footer navigation={navigationFooter}/>
 </Layout>
 
 <style lang="scss" is:global>
