--- a/src/styles/GlobalStyling.scss
+++ b/src/styles/GlobalStyling.scss
@@ -11,12 +11,13 @@
 html, body {
   font-size: 100%;
   scroll-behavior: smooth;
+  width: 100vw;
 }
 
 
 header {
   height: 90px;
-  width: 100%;
+  width: 100vw;
   position: fixed;
   display: flex;
   justify-content: space-between;
