--- a/src/layouts/multi.astro
+++ b/src/layouts/multi.astro
@@ -14,20 +14,20 @@ const {title} = Astro.props;
 const pages = await getCollection("pages");
 
 const navigation: INavigation[] = pages.map(
-(page: any): INavigation => ({
-  page: page,
-  title: page.data.title,
-  navigation: page.data.navigation,
-  slug: page.slug,
-  }),
+	(page: any): INavigation => ({
+		page: page,
+		title: page.data.title,
+		navigation: page.data.navigation,
+		slug: page.slug,
+	}),
 );
 
 const navigationHeader = navigation.filter((nav) =>
-nav.navigation?.includes("Header")
+	nav.navigation?.includes("Header")
 );
 
 const navigationFooter = navigation.filter((nav) =>
-nav.navigation?.includes("Footer")
+	nav.navigation?.includes("Footer")
 );
 ---
 
@@ -37,17 +37,18 @@ nav.navigation?.includes("Footer")
     <meta charset="UTF-8"/>
     <meta name="description" content="Astro description"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
     <meta name="generator" content={Astro.generator}/>
     <link rel="icon" type="image/svg+xml" href="/favicon-mode-dark.svg"/>
     <title>{title}</title>
 </head>
 <body>
-    <Header navigation={navigationHeader}/>
-    <main>
-        <slot/>
-    </main>
-    <GoBack/>
-    <Footer navigation={navigationFooter}/>
+<Header navigation={navigationHeader}/>
+<main>
+    <slot/>
+</main>
+<GoBack/>
+<Footer navigation={navigationFooter}/>
 </body>
 </html>
 
