--- a/src/styles/GlobalStyling.scss
+++ b/src/styles/GlobalStyling.scss
@@ -11,7 +11,10 @@
 html, body {
   font-size: 100%;
   scroll-behavior: smooth;
-  width: 100vw;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 main {
@@ -41,8 +44,6 @@ main {
     }
   }
 }
-
-
 
 h1, h2, h3, h4, h5, h6, p {
   margin-top: 0;
