--- a/src/layouts/multi.astro
+++ b/src/layouts/multi.astro
@@ -37,9 +37,9 @@ const navigationFooter = navigation.filter((nav) =>
     <meta charset="UTF-8"/>
     <meta name="description" content="Astro description"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
     <meta name="generator" content={Astro.generator}/>
     <link rel="icon" type="image/svg+xml" href="/favicon-mode-dark.svg"/>
+    <base href={import.meta.env.BASE_URL}/>
     <title>{title}</title>
 </head>
 <body>
