--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -2,7 +2,15 @@
 
 ---
 
-Eckwerk Stuttgart <br/>
-Stierlenstraße 25, <br/>
-70327 Stuttgart <br/>
-Mail: <a href="mailto:hallo@eckwerkstuttgart.de">hallo@eckwerkstuttgart.de</a>
+<form id="contactForm">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+
+    <label for="message">Message:</label>
+    <textarea id="message" name="message" required></textarea>
+
+    <button type="submit">Send</button>
+</form>
