Add remove gallery

--- a/src/components/IntroImage.astro
+++ b/src/components/IntroImage.astro
@@ -19,7 +19,8 @@ if (images[`/src/content/albums/Intro/${imagePath}`]) {
 
 <div>
 	{imageSrc ?
-          <Image src={imageSrc} alt={slogan}/> : <p>Image not found</p>}
+          <Image src={imageSrc} alt={slogan} />
+  }
 	{slogan && <h1>{slogan}</h1>}
 
     <div>
