--- a/src/components/IntroImage.astro
+++ b/src/components/IntroImage.astro
@@ -18,9 +18,9 @@ if (images[`/src/content/albums/Intro/${imagePath}`]) {
 ---
 
 <div>
-	{imageSrc ?
-          <Image src={imageSrc} alt={slogan} />
-  }
+	{imageSrc &&
+          <Image src={imageSrc} alt={slogan}/>
+	}
 	{slogan && <h1>{slogan}</h1>}
 
     <div>
