--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,12 +9,14 @@ import '@fontsource/source-sans-pro';
 import "@fontsource/roboto";
 import "./../styles/GlobalStyling.scss";
 import IntroImage from "../components/IntroImage.astro";
+import Gallery from "../components/Gallery.astro";
 
 const pages = await getCollection("pages");
 ---
 
 <Layout title="Eckwerk Stuttgart">
     <IntroImage imagePath={pages[0].data.imagePath!.toString()} slogan={pages[0].data.slogan!.toString()}/>
+    <Gallery imageCollection="Montage"/>
 	{pages.map((originPage) =>
 		originPage.data.mainStage === true ? (
             <Section page={originPage}/>
