--- a/src/components/IntroImage.astro
+++ b/src/components/IntroImage.astro
@@ -28,6 +28,7 @@ const {slogan} = Astro.props;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 70vh;
 
     img {
       width: 100%;
@@ -41,10 +42,11 @@ const {slogan} = Astro.props;
       left: 50%;
       transform: translate(-50%, -50%);
       color: white;
-      font-size: 1.5rem;
-      font-weight: 300;
+      font-size: 5rem !important;
+      font-weight: 200;
       text-align: center;
       padding: 0.5rem;
+      width: 100%;
     }
 
     div {
