--- a/src/layouts/multi.astro
+++ b/src/layouts/multi.astro
@@ -62,3 +62,11 @@ const navigationFooter = navigation.filter((nav) =>
   setFavicon();
   window.matchMedia("(prefers-color-scheme: dark)").addEventListener("change", setFavicon);
 </script>-->
+
+<style lang="scss">
+  main {
+    position: absolute;
+    right: 0;
+  }
+
+</style>
