--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -9,8 +9,9 @@
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
 
-    <label for="message">Message:</label>
+    <label for="message">Nachricht:</label>
     <textarea id="message" name="message" required></textarea>
 
-    <button type="submit">Send</button>
+    <button type="submit">Senden</button>
 </form>
+
