--- a/src/components/GoBack.astro
+++ b/src/components/GoBack.astro
@@ -11,7 +11,6 @@ import {Icon} from "astro-icon/components";
     </a>
 </div>
 
-
 <script>
 	const scrollToolBox = document.getElementById('scrollToolBox'); // Ensure you target the right element
 	const scrollTopButton = document.getElementById('scrollTopButton');
@@ -54,7 +53,6 @@ import {Icon} from "astro-icon/components";
 			const windowHeight = window.innerHeight;
 			const documentHeight = document.documentElement.scrollHeight;
 
-
 			if (scrollY <= 50 || (scrollY + windowHeight) >= documentHeight) {
 				scrollToolBox.style.display = 'none';
 			} else {
@@ -62,28 +60,26 @@ import {Icon} from "astro-icon/components";
 			}
 		})
 	}
-
 </script>
 
 <style lang="scss">
   @import "./../styles/GlobalStyling";
 
   div {
-    display: none;
-
-    @include min-width("l") {
-      display: none;
-    }
-
+    padding: $spacing-l; // Move this declaration above the nested rule
     position: fixed;
     top: 0;
     right: 0;
     height: 100vh;
-    padding: $spacing-l;
+    display: none;
     flex-direction: column;
     justify-content: flex-end;
     gap: 1rem;
     z-index: 900;
+
+    @include min-width("l") {
+      display: none;
+    }
 
     a {
       display: flex;
