--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,30 +1,131 @@
 ---
+import type {ImageMetadata} from "astro";
 import {getCollection} from "astro:content";
 import Layout from "../layouts/multi.astro";
-import Section from "../components/Section.astro";
 import "@fontsource-variable/montserrat";
 import "@fontsource-variable/fira-code";
 import "@fontsource-variable/source-code-pro";
 import '@fontsource/source-sans-pro';
 import "@fontsource/roboto";
 import "./../styles/GlobalStyling.scss";
-import IntroImage from "../components/IntroImage.astro";
-import Gallery from "../components/Gallery.astro";
+import Contact from "../components/Contact.astro";
 
 const pages = await getCollection("pages");
+
+const ParallaxImagesSrc = import.meta.glob<{ default: ImageMetadata }>("../assets/Albums/Parallax/*");
+const ParallaxImages = Object.keys(ParallaxImagesSrc);
+
+const IntroImagesSrc = import.meta.glob<{ default: ImageMetadata }>("../assets/Albums/Intro/*");
+const IntroImages = Object.keys(IntroImagesSrc);
+const IntroImage = await IntroImagesSrc[IntroImages[0]]();
 ---
 
 <Layout title="Eckwerk Stuttgart">
-    <IntroImage slogan={pages[0].data.slogan!.toString()}/>
-    <Gallery imageCollection="Montage"/>
-	{pages.map((originPage) =>
-		originPage.data.mainStage === true ? (
-            <Section page={originPage}/>
-		) : null
-	)}
+    <section class="introimage" style={`background-image: url('${IntroImage.default.src}')`}>
+			{pages[0].data.slogan && <h1>{pages[0].data.slogan}</h1>}
+        <div>
+            <button>Quick Links</button>
+        </div>
+    </section>
 
+	{pages.map(async (originPage, index) => {
+		const {Content} = await originPage.render();
+		const imagePath = ParallaxImages[index % ParallaxImages.length];
+		const image = await ParallaxImagesSrc[imagePath]();
+
+		return originPage.data.mainStage === true ? (
+            <>
+                <section id={originPage.data.title} class="content"
+                         style={`background-image: url('${image.default.src}')`}>
+                    <article>
+                        <Content/>
+
+											{originPage.data.title === "Kontakt" && (
+                              <Contact/>
+											)}
+                    </article>
+                </section>
+
+							{index % 1 === 0 ? (
+                      <section class="subContent">
+                          Hallo
+                      </section>
+							) : null}
+            </>
+		) : null;
+	})}
 </Layout>
 
 <style lang="scss" is:global>
   @import "./../styles/GlobalStyling";
+
+  section.content {
+    min-height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    article {
+      min-height: 30vh;
+      width: 100vw;
+      margin: 40vh auto;
+      padding: $spacing-xxl;
+      background-color: $color-white;
+      border-radius: 4px;
+
+    }
+  }
+
+  section.introimage {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    h1 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transform: translateY(-90%);
+      color: white;
+      font-size: 6rem !important;
+      font-weight: 400;
+      text-align: center;
+    }
+
+    div {
+      position: absolute;
+      top: 75%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      font-size: 1.5rem;
+      text-align: center;
+      padding: 0.5rem;
+    }
+  }
+
+  section.subContent {
+    min-height: 25vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $color-white;
+    border-left: unset;
+    border-right: unset;
+
+  }
 </style>
