--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
 
 							{index % 1 === 0 ? (
                       <section class="subContent">
-                          Hallo
+    Google Reviews
                       </section>
 							) : null}
             </>
@@ -118,7 +118,7 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
   }
 
   section.subContent {
-    min-height: 25vh;
+    min-height: 20vh;
     width: 100vw;
     display: flex;
     justify-content: center;
